Cayley functions added.

--- a/templates/isl/dashboard.html
+++ b/templates/isl/dashboard.html
@@ -47,7 +47,7 @@
           <div class="h5 mb-0 font-weight-bold text-gray-800">{{no_models}}</div>
         </div>
         <div class="col-auto">
-          <i class="fas fa-site-map fa-2x text-gray-300"></i>
+          <i class="fas fa-sitemap fa-2x text-gray-300"></i>
         </div>
       </div>
     </div>
