More entities added.

--- a/graph/templates/graph/entities.html
+++ b/graph/templates/graph/entities.html
@@ -3,18 +3,18 @@
 
 {% block content %}
 
-{% if rooms %}
+{% if entities %}
 <div class="row">
-{% for room, props in rooms.items %}
+{% for elm, props in entities.items %}
   <div class="col-lg-6">
 
     <div class="card shadow mb-4">
       <div class="card-header py-3">
-        <h6 class="m-0 font-weight-bold text-primary">{{ room }}</h6>
+        <h6 class="m-0 font-weight-bold text-primary">{{ elm }}</h6>
       </div>
       <div class="card-body">
         <table>
-        {% for name, val in props %}
+        {% for name, val in props.properties %}
         <tr>
           <td> {{ name }} </td>
           <td><code> {{ val }}</code></td>
@@ -22,22 +22,26 @@
         {% endfor %}
         </table>
 
-        <a href="/graph{{room}}/sensors" class="btn btn-danger btn-icon-split float-right">
+        {% for name, target in props.buttons %}
+
+        <a href="{{ target }}" class="btn btn-danger btn-icon-split float-right">
           <span class="icon text-white-50">
             <i class="fas fa-search"></i>
           </span>
-          <span class="text">Sensors</span>
+          <span class="text">{{ name }}</span>
         </a>
+        {% endfor %}
+
+
+
 
       </div>
 
 
-
-
-</div>
-
-
     </div>
+
+
+  </div>
 
 
 {% if not forloop.counter0|divisibleby:2 %}
