--- a/templates/isl/base_site.html
+++ b/templates/isl/base_site.html
@@ -39,13 +39,13 @@
 
   <!-- Nav Item - Rooms -->
   <li class="nav-item">
-    <a class="nav-link" href="/graph/rooms">
+    <a class="nav-link" href="/graph/entities/room">
       <i class="fas fa-fw fa-table"></i>
       <span>Rooms</span></a>
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="/graph/datasets">
+    <a class="nav-link" href="/graph/entities/dataset">
       <i class="fas fa-fw fa-coins"></i>
       <span>Datasdets</span></a>
   </li>
@@ -60,19 +60,19 @@
   </div>
 
   <li class="nav-item">
-    <a class="nav-link" href="/graph/tasks">
+    <a class="nav-link" href="/graph/entities/task">
       <i class="fas fa-fw fa-edit"></i>
       <span>Tasks</span></a>
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="/graph/models">
+    <a class="nav-link" href="/graph/entities/model">
       <i class="fas fa-fw fa-sitemap"></i>
       <span>Models</span></a>
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="/graph/runs">
+    <a class="nav-link" href="/graph/entities/run">
       <i class="fas fa-fw fa-cogs"></i>
       <span>Runs</span></a>
   </li>
