Live diagram added.

--- a/templates/isl/base.html
+++ b/templates/isl/base.html
@@ -260,6 +260,8 @@
   <!-- Custom scripts for all pages-->
   <script src="{% static "js/sb-admin-2.min.js" %}"></script>
 
+  {% block extrascript %}
+  {% endblock %}
 
 </body>
 </html>
