Web3 components added.

--- a/templates/isl/base_site.html
+++ b/templates/isl/base_site.html
@@ -19,25 +19,24 @@
     <div class="sidebar-brand-text mx-3">Inter-Space<br/>Learning</div>
   </a>
 
-  <!-- Divider -->
+  <!-- Dashboard -->
   <hr class="sidebar-divider my-0">
 
-  <!-- Nav Item - Dashboard -->
   <li class="nav-item active">
     <a class="nav-link" href="/">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Dashboard</span></a>
   </li>
 
-  <!-- Divider -->
+
+
+  <!-- Base Data -->
   <hr class="sidebar-divider">
 
-  <!-- Heading -->
   <div class="sidebar-heading">
     Base Data
   </div>
 
-  <!-- Nav Item - Rooms -->
   <li class="nav-item">
     <a class="nav-link" href="/graph/entities/room">
       <i class="fas fa-fw fa-table"></i>
@@ -51,10 +50,9 @@
   </li>
 
 
-  <!-- Divider -->
-  <hr class="sidebar-divider">
 
-  <!-- Heading -->
+  <!-- Knowledge Graph -->
+  <hr class="sidebar-divider">
   <div class="sidebar-heading">
     Learning
   </div>
@@ -73,6 +71,37 @@
 
   <li class="nav-item">
     <a class="nav-link" href="/graph/entities/run">
+      <i class="fas fa-fw fa-cogs"></i>
+      <span>Runs</span></a>
+  </li>
+
+
+  <!-- Blockchain -->
+  <hr class="sidebar-divider">
+  <div class="sidebar-heading">
+    Blockchain
+  </div>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/accounts">
+      <i class="fas fa-fw fa-edit"></i>
+      <span>Accounts</span></a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/blockchain/models">
+      <i class="fas fa-fw fa-sitemap"></i>
+      <span>Models</span></a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/blockchain/tasks">
+      <i class="fas fa-fw fa-cogs"></i>
+      <span>Tasks</span></a>
+  </li>
+
+  <li class="nav-item">
+    <a class="nav-link" href="/blockchain/runs">
       <i class="fas fa-fw fa-cogs"></i>
       <span>Runs</span></a>
   </li>
